completed initial test of cache lifecycle

--- a/dev.config
+++ b/dev.config
@@ -1,5 +1,5 @@
 [{lager, [{error_logger_hwm, 50},
-	  {handlers, [{lager_file_backend, [{file, "log/bfe.log"},
+	  {handlers, [{lager_file_backend, [{file, "log/snp.log"},
 					    {level, info},
 					    {size, 10000000},
 					    {date, ""},
@@ -10,12 +10,6 @@
 					    {date, ""},
 					    {count, 10}]}]},
 	  {crash_log, "log/crash.log"}]},
- {safetyvalve, [{queues, [{bf_queue, [{queue_type, sv_queue_ets},
-				      {hz, 5000},
-				      {rate, 1},
-				      {token_limit, 1},
-				      {size, 1000},
-				      {concurrency, 50}]}]}]},
  {sasl, [{sasl_error_logger, {file,"log/sasl.log"}}]}].
 
 
